# toyc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release.toml  run_tests.sh
.github/workflows/: build.yml
.helix/: languages.toml
akyno_ast/: Cargo.toml
akyno_ast/src/: exprs.rs  lib.rs  patterns.rs  types.rs
akyno_util/: Cargo.toml
akynoc/: CHANGELOG.md  Cargo.toml  README.md  release.toml
akynoc/src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs
akynoc/src/ast/: exprs.rs  functions.rs  pattern.rs  patterns.rs  statements.rs  structs.rs  types.rs
akynoc/tests/: integration.rs
akynoc/tests/resources/source/: collections.akn  factorial.akn  invalid_chars.akn  long_comment.akn  simple_arithmetic.akn  statics.akn
akynoc/tests/snapshots/: integration__collections@lexer.snap  integration__collections@parser.snap  integration__factorial@lexer.snap  integration__factorial@parser.snap  integration__long_comment@lexer.snap  integration__long_comment@parser.snap  integration__simple_arithmetic@lexer.snap  integration__simple_arithmetic@parser.snap  integration__statics@lexer.snap  integration__statics@parser.snap
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/introduction/: README.md
docs/src/syntax/: README.md  literals_and_types.md  statements.md
docs/theme/: highlight.js
grammars/: parser_grammar.md
nockyc/: CHANGELOG.md  Cargo.toml  README.md  build.rs
nockyc/src/: ast.rs  lexer.rs  lib.rs  parser.rs
nockyc/src/ast/: exprs.rs  statements.rs
nokeyc/: README.md
src/: ast.rs  hir.rs  lexer.rs  lib.rs  main.rs  parser.rs  util.rs
src/ast/: decl.rs  expr.rs  functions.rs  literal.rs  program.rs  stmt.rs  structs.rs  types.rs  unbound.rs
src/hir/: bind.rs  scope.rs  typer.rs
src/sem/: bind.rs
tests/: nockyc.rs  test_lexer.rs  tests.rs
tests/resources/source/: align_1_struct_array.tc  alignment.tc  array_ptr_cast_1.tc  bad_funcall.tc  bad_fundecl.tc  call_non_function.tc  decls.tc  exprs.tc  extra_rpar_funcall.tc
tests/snapshots/: test_lexer__lexer-3.snap.new  test_lexer__lexer.snap.new  tests__align_1_struct_array@parser.snap  tests__align_1_struct_array@sem.snap  tests__alignment@parser.snap  tests__alignment@sem.snap  tests__arithmetic@parser.snap  tests__arithmetic@sem.snap  tests__array_ptr_cast_1@parser.snap  tests__array_ptr_cast_1@sem.snap  tests__arrays@parser.snap  tests__arrays@sem.snap  tests__bad_fundecl@parser.snap  tests__call_non_function@parser.snap  tests__decls@parser.snap  tests__decls@parser.snap.new  tests__decls@sem.snap  tests__deref_non_ptr@parser.snap  tests__exprs@parser.snap  tests__exprs@sem.snap  tests__pass_struct@parser.snap  tests__pass_struct@sem.snap  tests__struct_fields_same_name@parser.snap  tests__var_struct_same_name@parser.snap  tests__var_struct_same_name@sem.snap
tests/src/: decls.tc
