[package]
name = "toyc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
erased-serde = "0.4.9"
ron = "0.12.0"
serde = {version ="1.0.228", features=["derive", "rc"]}
type-equalities = "0.3.1"

[dev-dependencies]
insta = {version = "1.46.0", features = ["yaml", "glob", "ron"]}
rstest = "0.26.1"
