[package]
name = "nockyc"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ariadne = "0.6.0"
chumsky = { version = "0.12.0", features = ["bytes", "pratt"] }
internment = { version = "0.8.6", features = ["arena", "serde"] }
logos = "0.13.0"
ron = "0.12.0"
serde = {version ="1.0.228", features=["derive", "rc"]}

[dev-dependencies]
insta = {version = "1.46.0", features = ["yaml", "glob", "ron"]}
rstest = "0.26.1"
tempfile = "3.24.0"
