[package]
name = "akynoc"
version = "0.1.0-alpha.2"
edition = "2024"
repository = "https://github.com/anoaky/akyno"
description = "Akyno Compiler"

[dependencies]
anyhow = "1.0.100"
ariadne = "0.6.0"
chumsky = { version = "0.12.0", features = ["bytes", "memoization", "pratt"] }
clap = { version = "4.5.54", features = ["derive"] }
internment = { version = "0.8.6", features = ["arena", "serde"] }
logos = "0.16.0"
ron = "0.12.0"
serde = {version ="1.0.228", features=["derive", "rc"]}

[dev-dependencies]
insta = {version = "1.46.0", features = ["yaml", "glob", "ron", "redactions"]}
rstest = "0.26.1"
tempfile = "3.24.0"

