[package]
name = "akynoc"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/anoaky/akyno"
description = "Akyno Compiler"

[dependencies]
akyno_ast = { workspace = true }
akyno_util = { workspace = true }
anyhow = { workspace = true }
ariadne = { workspace = true }
chumsky = { version = "0.12.0", features = ["bytes", "memoization", "pratt"] }
clap = { version = "4.5.54", features = ["derive"] }
internment = { workspace = true }
logos = "0.16.0"
ron = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

